<resources>
    <string name="app_name" translatable="false">Screen Mirroring</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="privacy_text">Privacy Policy</string>
    <string name="privacy_text1">These are the terms of Service and privacy policy of this app. This app provides you screen casting functionality. This privacy policy provices an overview of how we process personal data of our users. We will not share any of your personal information with anyone except as per stated in this privacy policy.</string>
    <string name="privacy_text2">Our Privacy Commitment</string>
    <string name="privacy_text3">We respect your rights and your privacy. Your ability to make informed choices about the use of your information is important to us. We collect different types of information for various purposes to provide you with more improved services.</string>
    <string name="privacy_text4">Information We Collect</string>
    <string name="privacy_text5">Permissions in this Application are the Following</string>
    <string name="privacy_text6">• Write External Storage  • Read External Storage</string>
    <string name="privacy_text7">Changes to this Privacy Policy</string>
    <string name="privacy_text8">We may change this privacy policy from time to time, by posting the most current privacy policy and its effective date. In case we change this privacy policy substantially, we may bring such changes to your attention by explicit notice in this page.</string>
    <string name="privacy_text9">Third-party links</string>
    <string name="privacy_text10">We do not include or offer third-party products or services on our website.</string>
    <string name="privacy_text11">Children\'s Privacy</string>
    <string name="privacy_text12">Our Service does not address anyone under the age of 18 (Children). We do not knowingly collect any personally identifiable information from anyone under the age of 18. If you are a parent/guardian and you are aware that your Children has provided us with Personal Data, please contact us. If we become aware that we have collected Personal Data from children without verification of parental consent, we take steps to remove that information from our servers.</string>
    <string name="privacy_text13">Contact Us</string>
    <string name="privacy_text14">If you have any questions about this Privacy Policy, please contact us.</string>
    <string name="exit_dialog_desc">Are you sure to exit the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="location_dialog_title">Location Permission</string>
    <string name="location_dialog_desc">This app requires permission to use location services to search nearby devices for Screen Casting</string>
    <string name="okay">Okay</string>
    <string name="casting">Casting</string>
    <string name="settings">Settings</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="share">Share</string>
    <string name="help">How to Use?</string>

    <string name="initialText">Share this incredible app with your friends and family.</string>
    <string name="share_subject">Tell a friend</string>
    <string name="device_not_supported">Sorry, this device is not supported.</string>
    <string name="intro_slider_1_title">TV and Phone Connection</string>
    <string name="intro_slider_1_desc">Make sure to connect your phone and TV to same network to start screen casting.</string>
    <string name="intro_slider_2_title">Cast your Screen</string>
    <string name="intro_slider_2_desc">By clicking Cast button you would get a list of Nearby devices available for casting</string>
    <string name="intro_slider_3_title">Choose Device</string>
    <string name="intro_slider_3_desc">Select your device from list, start screen casting and enjoy on big screen.</string>
    <string name="connect_wifi">Connect to a wireless network</string>
    <string name="language">Language</string>
    <string name="scanning">Scanning for devices</string>
    <string name="waiting_text">Waiting for connection</string>
    <string name="connect_wifi_text">Connect to wifi</string>
    <string name="enter_network_password">Enter password of Wifi</string>
    <string name="connect">Connect</string>
    <string name="english">English</string>
    <string name="urdu">Urdu</string>
    <string name="arabic">Arabic</string>
    <string name="chinese">Chinese</string>
    <string name="serbian">Serbian</string>
    <string name="japanese">Japanese</string>
    <string name="turkish">Turkish</string>
    <string name="bengali">Bengali</string>
    <string name="hindi">Hindi</string>
    <string name="russian">Russian</string>
    <string name="indonesian">Indonesian</string>
    <string name="italian">Italian</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="portuguese">Portuguese</string>
    <string name="thai">Thai</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="storage_permission_title">Storage Permission Required</string>
    <string name="storage_permission_desc">Storage permission is required to access media files on your device.</string>
    <string name="storage_perm_denied_title">Storage Permission Denied</string>
    <string name="storage_perm_denied_desc">You must to allow Storage Permission to access your Media Files for Screen Casting.</string>
    <string name="grant_permissions">Grant Storage Access</string>
    <string name="image_preview">Image Preview</string>
    <string name="error_message">Error in Image Preview</string>
    <string name="video_preview">Video Preview</string>
    <string name="feature_not_available">This Language will be available in future updates.</string>
    <string name="start">Start</string>
    <string name="youtube">Youtube</string>
    <string name="view_all">View All</string>
    <string name="ad_attribution">Ad</string>

</resources>