<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:weightSum="2">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.95"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="06dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="03dp">

                <TextView
                    android:id="@+id/PRIVACY_POLICY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp">

                <TextView
                    android:id="@+id/PRIVACY_POLICY_DETAILS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text1"
                    android:textColor="#5E5D5D"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="03dp">

                <TextView
                    android:id="@+id/OUR_PRIVACY_COMMITMENT"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text2"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp">

                <TextView
                    android:id="@+id/OUR_PRIVACY_COMMITMENT_DETAILS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text3"
                    android:textColor="#5E5D5D"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/INFORMATION_WE_COLLECT"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text4"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="03dp">

                <TextView
                    android:id="@+id/PERMISSION_IN_THIS_APPLICATION_ARE_THE_FOLLOWING"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text5"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text6"
                    android:textColor="#5E5D5D"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="03dp">

                <TextView
                    android:id="@+id/CHANGE_TO_THIS_PRIVACY_POLICY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text7"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp">

                <TextView
                    android:id="@+id/CHANGE_TO_THIS_PRIVACY_POLICY_DETAILS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text8"
                    android:textColor="#5E5D5D"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="03dp">

                <TextView
                    android:id="@+id/THIRD_PARTY_LINKS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text9"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp">

                <TextView
                    android:id="@+id/THIRD_PARTY_LINKS_DETAILS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text10"
                    android:textColor="#5E5D5D"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="03dp">

                <TextView
                    android:id="@+id/CHILDREN_PRIVACY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text11"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp">

                <TextView
                    android:id="@+id/CHILDREN_PRIVACY_DETAILS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text12"
                    android:textColor="#5E5D5D"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="03dp">

                <TextView
                    android:id="@+id/CONTACT_US"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text13"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp">

                <TextView
                    android:id="@+id/CONTACT_US_DETAILS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/font_screen_mirroring"
                    android:text="@string/privacy_text14"
                    android:textColor="#5E5D5D"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#5E5D5D"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_okay"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.05"
        android:background="@drawable/toolbar_bg_layout"
        android:fontFamily="@font/font_screen_mirroring"
        android:text="@string/okay"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />


</LinearLayout>