<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.SplashActivity_OKRA">

    <RelativeLayout
        android:id="@+id/top_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/top_simple_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#373535"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_banner" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_simple_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_simple_line">

        <!--    Add your Layout Here    -->
        <RelativeLayout
            android:id="@+id/relative_back_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_splash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/_100sdp">

            <ImageView
                android:id="@+id/splash_back_image"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_back_splash" />
        </RelativeLayout>

        <TextView
            android:id="@+id/screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="20dp" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_back_top" />

        <!--    TODO: Change Progress bar and Start Button accordingly    -->
        <ProgressBar
            android:id="@+id/progress_bar_splash"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_start"
            app:layout_constraintEnd_toEndOf="@+id/btn_start"
            app:layout_constraintStart_toStartOf="@+id/btn_start"
            app:layout_constraintTop_toTopOf="@+id/btn_start" />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="@+id/relative_back_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bottom_simple_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#373535"
        app:layout_constraintBottom_toTopOf="@id/bottom_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/bottom_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>